--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <!-- <p v-if="inStock">In Stock</p> -->
           <!-- <p v-show="inStock">In Stock</p> -->
           <p v-if="inventory > 10">In Stock</p>
+          <p v-else-if="inventory <= 10 && inventory > 0">Amost sold out!</p>
           <p v-else>Out of Stock</p>
         </div>
       </div>
