--- a/index.html
+++ b/index.html
@@ -21,11 +21,20 @@
         </div>
         <div class="product-info">
           <h1>{{ product }}</h1>
+          <p v-if="onSale" style="color:red;">On Sale</p>
+
           <!-- <p v-if="inStock">In Stock</p> -->
           <!-- <p v-show="inStock">In Stock</p> -->
           <p v-if="inventory > 10">In Stock</p>
           <p v-else-if="inventory <= 10 && inventory > 0">Amost sold out!</p>
           <p v-else>Out of Stock</p>
+          <ul>
+            <p v-for="detail in details">{{ detail }}</p>
+          </ul>
+          <ul>
+            <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
+          </ul>
+            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
         </div>
       </div>
     </div>
