--- a/index.html
+++ b/index.html
@@ -1,55 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Vue Mastery</title>
+    <!-- Import Styles -->
+    <link rel="stylesheet" href="./assets/styles.css" />
+    <!-- Import Vue.js -->
+    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Vue Mastery</title>
-  <!-- Import Styles -->
-  <link rel="stylesheet" href="./assets/styles.css" />
-  <!-- Import Vue.js -->
-  <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
-</head>
+  <body>
+    <div id="app">
+      <div class="nav-bar"></div>
+      <div class="cart">Cart({{ cart }})</div>
 
-<body>
-  <div id="app">
-    <div class="nav-bar"></div>
-    <div class="cart">Cart({{ cart }})</div>
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <img :class="{ 'out-of-stock-img': !inStock}" v-bind:src="image" />
+          </div>
+          <div class="product-info">
+            <h1>{{ title }}</h1>
+            <p v-if="onSale" style="color: red">{{ saleMessage }}</p>
 
-    <div class="product-display">
-      <div class="product-container">
-        <div class="product-image">
-          <img :class="{ 'out-of-stock-img': !inStock}" v-bind:src="image">
-        </div>
-        <div class="product-info">
-          <h1>{{ product }}</h1>
-          <p v-if="onSale" style="color:red;">On Sale</p>
-
-          <!-- <p v-if="inStock">In Stock</p> -->
-          <!-- <p v-show="inStock">In Stock</p> -->
-          <p v-if="inventory > 10">In Stock</p>
-          <p v-else-if="inventory <= 10 && inventory > 0">Amost sold out!</p>
-          <p v-else>Out of Stock</p>
-          <ul>
-            <p v-for="detail in details">{{ detail }}</p>
-          </ul>
-          <ul>
-            <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
-          </ul>
-            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)" class="color-circle" :style="{backgroundColor: variant.color}"></div>
-            <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" v-on:click="addToCart">Add to Cart</button>
+            <p v-if="inStock">In Stock</p>
+            <!-- <p v-show="inStock">In Stock</p> -->
+            <!-- <p v-if="inventory > 10">In Stock</p> -->
+            <p v-else-if="inventory <= 10 && inventory > 0">Amost sold out!</p>
+            <p v-else>Out of Stock</p>
+            <ul>
+              <p v-for="detail in details">{{ detail }}</p>
+            </ul>
+            <ul>
+              <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
+            </ul>
+            <div
+              v-for="(variant, index) in variants"
+              :key="variant.id"
+              @mouseover="updateVariant(index)"
+              class="color-circle"
+              :style="{backgroundColor: variant.color}"
+            ></div>
+            <button
+              class="button"
+              :class="{ disabledButton: !inStock }"
+              :disabled="!inStock"
+              v-on:click="addToCart"
+            >
+              Add to Cart
+            </button>
             <button class="button" @click="removeFromCart">Remove Item</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Import App -->
-  <script src="./main.js"></script>
+    <!-- Import App -->
+    <script src="./main.js"></script>
 
-  <!-- Mount App -->
-  <script>
-    const mountedApp = app.mount('#app')
-  </script>
-</body>
-
+    <!-- Mount App -->
+    <script>
+      const mountedApp = app.mount("#app");
+    </script>
+  </body>
 </html>
